# microtone

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.linux  README.md  main.cpp  microtone.pro
Asciiboard/: Asciiboard.pro  Makefile.linux  asciiboard.cpp  asciiboard.hpp  main.cpp  synth_controls.hpp
Display/: Display.pro  display.cpp  display.hpp  main.cpp
Microtone/: Makefile.linux  Microtone.pro
Microtone/include/microtone/: audio_buffer.hpp  envelope.hpp  filter.hpp  microtone_platform.hpp  midi_input.hpp  oscillator.hpp  synthesizer.hpp  synthesizer_voice.hpp  weighted_wavetable.hpp
Microtone/include/microtone/synthesizer/: envelope.hpp  filter.hpp  low_frequency_oscillator.hpp  oscillator.hpp  synthesizer.hpp  synthesizer_voice.hpp  wavetable.hpp
Microtone/src/: envelope.cpp  filter.cpp  log.cpp  midi_input.cpp  oscillator.cpp  synthesizer.cpp  synthesizer_voice.cpp
Microtone/src/synthesizer/: envelope.cpp  filter.cpp  low_frequency_oscillator.cpp  oscillator.cpp  synthesizer.cpp  synthesizer_voice.cpp
asciiboard/: CMakeLists.txt
asciiboard/include/asciiboard/: asciiboard.hpp
asciiboard/src/: asciiboard.cpp
asciiboard/src/asciiboard/: asciiboard.cpp  main.cpp
common/: CMakeLists.txt
common/src/common/: atomic_snapshot.hpp  dirty_flagged.hpp  exception.cpp  exception.hpp  keyboard.h  log.cpp  log.hpp  midi_handle.hpp  mutex_protected.hpp  ring_buffer.hpp  sliding_window.hpp  timer.hpp
demo/: CMakeLists.txt
demo/asciiboard/: CMakeLists.txt
demo/asciiboard/src/asciiboard/: asciiboard.cpp  asciiboard.hpp  demo_midi_generator.hpp  main.cpp  processor.hpp  render_loop.hpp  state.hpp  synth_controls.hpp
demo/asciiboard/src/asciiboard/components/: compact_piano_roll.hpp  effects_controls.hpp  envelope_controls.hpp  envelope_graph.hpp  graph.hpp  info_message.hpp  oscillator_controls.hpp  oscilloscope.hpp  piano_roll.hpp
include/microtone/: envelope.hpp  exception.hpp  filter.hpp  log.hpp  midi_input.hpp  midi_note.hpp  oscillator.hpp  synthesizer.hpp  synthesizer_voice.hpp
io/: CMakeLists.txt  README.md
io/src/io/: audio_output_stream.cpp  audio_output_stream.hpp  gpio_components.hpp  gpio_input.cpp  gpio_input.hpp  midi_input.cpp  midi_input.hpp  midi_input_stream.cpp  midi_input_stream.hpp  midi_message.hpp  ring_buffer.hpp
microtone/: CMakeLists.txt
microtone/include/microtone/: exception.hpp
microtone/include/microtone/synthesizer/: oscillator.hpp  synthesizer.hpp  synthesizer_voice.hpp  weighted_wavetable.hpp
microtone/src/microtone/: exception.hpp  microtone_platform.cpp  midi_input.cpp  midi_input.hpp
microtone/src/microtone/synthesizer/: envelope.cpp  filter.cpp  low_frequency_oscillator.cpp  oscillator.cpp  synthesizer.cpp  synthesizer.hpp  synthesizer_voice.cpp  synthesizer_voice.hpp  wavetable.hpp
microtone/src/synthesizer/: envelope.cpp  synthesizer.cpp  synthesizer_voice.cpp
src/: envelope.cpp  exception.cpp  filter.cpp  log.cpp  midi_input.cpp  oscillator.cpp  synthesizer.cpp  synthesizer_voice.cpp
synth/: CMakeLists.txt
synth/src/synth/: adsr.hpp  audio_buffer.hpp  audio_pipeline.cpp  audio_pipeline.hpp  controller.hpp  envelope.cpp  envelope.hpp  filter.cpp  filter.hpp  instrument.hpp  low_frequency_oscillator.cpp  low_frequency_oscillator.hpp  math.hpp  midi_device.hpp  oscillator.cpp  oscillator.hpp  synthesizer.cpp  synthesizer.hpp  synthesizer_processor.hpp  synthesizer_voice.cpp  synthesizer_voice.hpp  voice.hpp  wave_table.hpp  wavetable.hpp  weighted_wavetable.hpp
synth/src/synth/effects/: delay.hpp  high_pass_filter.hpp  low_pass_filter.hpp  modulated_filter.hpp
util/: .microtone_env  README.md  build_microtone.sh  dev_microtone.sh  pull_microtone.sh  run_microtone.sh  setup_devenv.sh
util/config/: asound.conf
